# PatchBay

./: .gitignore  AGENTS.md  ARCHITECTURAL_PLAN_WORKPLAN.md  ARCHITECTURE.md  CHANGELOG.md  CHATGPT_INSTRUCTIONS.md  CODEXPRO_SUBSYSTEM_INVENTORY.md  CONTEXT_AND_HANDOFF_SPEC.md  CONTRIBUTING.md  HYBRID_MIGRATION_PLAN.md  NOTICE  OSS_PIPELINE.md  OSS_ROADMAP.md  PUBLIC_TOOL_SURFACE.md  QUICKSTART.md  README.md  RUNTIME_DECISION.md  SECURITY.md  SECURITY_PRODUCT_BOUNDARY.md  SECURITY_SCOPE.md  TESTING.md  TESTING_AND_EVALS.md  THREAT_MODEL.md  auth.py  codex_model_options.py  codex_output_schema.json  codex_sessions.py  config.yaml  connector.py  job_executor.py  job_manager.py  launcher.py  mcp_protocol.py  power_tools.py  profile_store.py  pyproject.toml  requirements.txt  security.py  server.py  start.sh  (+7 more)
.github/: pull_request_template.md
docs/: API_CREDITS_PLAN.md  README.md  SECURITY_MODEL.md  WHY_THIS_MATTERS.md
examples/: codex-config-streamable-http.toml  inspect-diff-before-merge.md  isolated-apply-job.md  local-safety-checklist.md  patchbay-config-streamable-http.toml  pr-review-workflow.md  read-only-repo-analysis.md  release-notes-workflow.md  security-review-owned-repo.md
maintainer-workflows/: docs-refresh.md  issue-triage.md  owned-repo-security-review.md  pr-review.md  release-notes.md  test-generation.md
scripts/: doctor.py  external_chatgpt_style_validation.py  handoff.py  live_hub_edge_eval.py  live_hub_v2_eval.py  live_mcp_eval.py  manual_mcp_smoke.py  pro_context.py  production_entrypoint_restart_eval.py  real_mcp_worker_trial.py  start.py  worker_phase1_eval.py  worker_phase2_eval.py  worker_phase3_eval.py  worker_phase4_eval.py
tests/: test_cli.py  test_codex_model_options.py  test_codex_sessions.py  test_config_tool.py  test_connector.py  test_evidence.py  test_handoff_cli.py  test_hidden_handlers.py  test_http_auth.py  test_hub_app_v2.py  test_hub_backup_admission_v2.py  (+67 more)
(+212 files in other folders)
